<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/widget"
    android:background="#ffffff"
    android:contentDescription="@string/app_name"
    >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day_of_the_week"
            android:id="@+id/day_of_the_week"
            android:background="#8080ff"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:padding="7dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_today"
            android:id="@+id/date_today"
            android:layout_below="@+id/day_of_the_week"
            android:background="#8080ff"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:padding="7dp"
            android:paddingTop="0dp"
            />



    <ListView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/widget_list_view"
        android:layout_below="@+id/date_today"
        />
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textColor="#000000"
        android:textStyle="bold"
        android:text="@string/no_matches"
        android:textSize="20sp" />


 <!--   <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/team1"
            android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/team2"
            android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/time"
            android:padding="10dp"/>


    </LinearLayout>-->
</RelativeLayout>
