<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="#ffffff"
        android:layout_margin="3dp"
        android:minWidth="40dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/date"
            android:textSize="24sp"
            android:textColor="@color/blue01"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/day_week"
            android:textSize="12sp"
            android:textColor="@color/blue01"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="#993300"
        android:layout_margin="3dp"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/time"
            android:text="@string/match_time"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="7"
        android:background="#ff6600"
        android:layout_margin="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_one"
            android:id="@+id/team1"
            android:textColor="#ffffff"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_two"
            android:id="@+id/team2"
            android:textColor="#ffffff"/>


    </LinearLayout>


    <!--

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:minWidth="40dp"
            android:padding="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:id="@+id/date"
                android:textSize="24sp"
                android:textColor="@color/blue01"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:id="@+id/day_week"
                android:textSize="12sp"
                android:textColor="@color/blue01"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ff1a1a"
            android:padding="3dp"
            android:layout_margin="3dp"
            android:minWidth="40dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/time"
                android:text="TIME"
                android:textColor="#ffffff"
                android:textAlignment="center"
                android:layout_gravity="center_vertical"
/>

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_margin="3dp"
        android:layout_weight="7"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ff5050"
        android:layout_gravity="top"
        android:padding="3dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TEAM1"
            android:id="@+id/team1"
            android:textColor="#ffffff"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TEAM2"
            android:id="@+id/team2"
            android:textColor="#ffffff"/>


    </LinearLayout>-->

</LinearLayout>